fix spacing on about row
gottem

--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@ a:hover {
 .about {
     color: white;
     background-color: rgba(0, 0, 0, 0.4);
-    min-height: 450px;
+    min-height: 500px;
     border: solid #f3c82c 2.5px;
 }
 
@@ -72,7 +72,7 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 450px;
+    min-height: 500px;
     border: solid #f3c82c 2.5px;
 }
 
